src/snapshots/netflow_parser__tests__base_tests__it_parses_v9_and_re_exports.snap
---
source: src/tests.rs
expression: v9.to_be_bytes()
---
- 0
- 9
- 0
- 2
- 0
- 0
- 9
- 9
- 0
- 1
- 2
- 3
- 0
- 0
- 0
- 1
- 0
- 0
- 0
- 1
- 0
- 0
- 0
- 16
- 1
- 2
- 0
- 2
- 0
- 1
- 0
- 4
- 0
- 8
- 0
- 4
- 1
- 2
- 0
- 12
- 9
- 2
- 3
- 4
- 9
- 9
- 9
- 8
