src/snapshots/netflow_parser__tests__base_tests__it_parses_v9_data_cached_template.snap
---
source: src/tests.rs
expression: parser.parse_bytes(&packet)
---
- V9:
    header:
      version: 9
      count: 1
      sys_up_time: 2313
      unix_secs: 66051
      sequence_number: 1
      source_id: 1
    flowsets:
      - header:
          flowset_id: 258
          length: 12
        body:
          data:
            fields:
              - 0:
                  - InBytes
                  - DataNumber: 151126788
                1:
                  - Ipv4SrcAddr
                  - Ip4Addr: 9.9.9.8
