src/snapshots/netflow_parser__tests__base_tests__it_parses_v9_with_no_template_fields_raises_error.snap
---
source: src/tests.rs
expression: parser.parse_bytes(&packet)
---
- V9:
    header:
      version: 9
      count: 26
      sys_up_time: 1
      unix_secs: 1
      sequence_number: 0
      source_id: 16908298
    flowsets:
      - header:
          flow_set_id: 8
          length: 0
        body:
          unparsed_data:
            - 0
            - 8
            - 0
            - 0
            - 1
            - 1
