src/snapshots/netflow_parser__tests__base_tests__it_raises_error_when_parsing_v9_with_no_template_fields.snap
---
source: src/tests.rs
expression: parser.parse_bytes(&packet)
---
packets: []
error:
  Partial:
    message: "V9 parse error: Parsing Error: Error { input: [1, 1], code: MapRes }"
